# reshard-tokenized

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
tests/: cli_integration.rs
tests/data/: README.md
tests/data/source_jsonl/: doc-0.jsonl  doc-1.jsonl  doc-2.jsonl  doc-3.jsonl  doc-4.jsonl  doc-5.jsonl  doc-6.jsonl  doc-7.jsonl
tests/data/tokenized_input/nested/a/: part-4-00000.npy  part-5-00000.npy
tests/data/tokenized_input/nested/b/: part-6-00000.npy  part-7-00000.npy
tests/data/tokenized_input/root/: part-0-00000.npy  part-1-00000.npy  part-2-00000.npy  part-3-00000.npy
