[package]
name = "reshard-tokenized"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
flate2 = "1.1.0"
indicatif = "0.17.11"
rayon = "1.10.0"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.19.1"
