[package]
name = "reshard-tokenized"
version = "0.2.0"
description = "CLI for merging tokenized shard .npy files and remapping .csv.gz metadata offsets."
license = "Apache-2.0"
repository = "https://github.com/soldni/reshard-tokenized"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "npy", "csv", "sharding", "tokenized"]
edition = "2024"

[[bin]]
name = "reshard-tokenized"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
csv = "1.4.0"
flate2 = "1.1.0"
indicatif = "0.17.11"
rayon = "1.10.0"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.19.1"
